--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@types/styled-components": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "babel-jest": "^27.5.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-testing-library": "^5.0.5",
+    "jest": "^27.5.1",
+    "ts-node": "^10.5.0",
     "typescript": "4.5.5"
   }
 }
