--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "easy-peasy": "^5.0.4",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
