--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,9 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
     "react-hooks/exhaustive-deps": "off"
+  },
+  "env": {
+    "browser": true,
+    "jest": true
   }
 }
