--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@types/jest": "^27.4.1",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@types/styled-components": "^5.1.22",
+    "@types/testing-library__jest-dom": "^5.14.3",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "babel-jest": "^27.5.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
+    "eslint-config-next": "^0.2.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-testing-library": "^5.0.5",
     "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "4.5.5"
   }
