--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@types/validator": "^13.7.2",
     "bcryptjs": "^2.4.3",
     "easy-peasy": "^5.0.4",
+    "formik": "^2.2.9",
     "mongodb": "^4.6.0",
     "next": "^12.1.0",
     "next-auth": "^4.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-focus-lock": "^2.9.1",
-    "react-hook-form": "^7.31.2",
     "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.6",
