--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "formik": "^2.2.9",
     "mongodb": "^4.6.0",
     "next": "^12.1.0",
-    "next-auth": "^4.3.4",
+    "next-auth": "3.29.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-focus-lock": "^2.9.1",
