--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.7",
     "@types/bcryptjs": "^2.4.2",
+    "@types/mongoose": "^5.11.97",
     "@types/validator": "^13.7.2",
     "bcryptjs": "^2.4.3",
     "easy-peasy": "^5.0.4",
     "formik": "^2.2.9",
     "mongodb": "^4.6.0",
+    "mongoose": "^7.0.0",
     "next": "^12.1.0",
     "next-auth": "3.29.10",
     "react": "17.0.2",
