--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongodb": "^4.6.0",
     "mongoose": "^7.0.0",
     "next": "^12.1.0",
-    "next-auth": "3.29.10",
+    "next-auth": "^4.22.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-focus-lock": "^2.9.1",
